# i3-style

./: .gitignore  Cakefile  Cargo.toml  README.md  build.rs  package.json
doc/: spec.md
legacy/: .gitignore  LICENSE  README.md
legacy/src/: index.coffee
legacy/test/: test.coffee  theme.json
legacy/themes/: alphare  archlinux  base16-tomorrow  debian  gruvbox  mate  seti  solarized  ubuntu
lib/: cli.js  index.js
screenshots/: screenshots.sh
src/: cli.coffee  index.coffee  main.rs  theme.rs  writer.rs
test/: test.coffee
test-resources/: minimal-config  minimal-config-after-template  minimal-config-expected  missing-config  missing-config-expected  missing-things-config
themes/: archlinux  base16-ateliercave  base16-atelierforest  base16-atelierheath  base16-atelierseaside  base16-bright  base16-google  base16-grayscale  base16-marrakesh  base16-mocha  base16-pop  base16-setiui  base16-solarized  chama  debian  deep-purple  default  flat-gray  gruvbox  halloween  icelines  lime  mate  oceanic-next  okraits  purple  seti  slate  solarized  solarized-transparent-dark  solarized-transparent-light  tomorrow-night-80s  ubuntu  whitefordarkness
themes/base16/: 3024  README.md  apathy  ashes  atelierdune  atelierestuary  atelierlakeside  atelierplateau  ateliersavanna  ateliersulphurpool  bespin  brewer  chalk  codeschool  colors  darktooth  default  eighties  embers  flat  greenscreen  harmonic16  hopscotch  irblack  isotope  londontube  macintosh  monokai  ocean  oceanicnext  paraiso  phd  railscasts  shapeshifter  summerfruit  twilight  yesterday  (+2 more)
