[package]
name = "i3-style"
description = "Make your i3 config a little more stylish"
version = "1.0.1"
authors = ["Tony Crisci <tony@dubstepdish.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/acrisci/i3-style"
build = "build.rs"
exclude = ["legacy/*", "test-resources/*"]

[dependencies]
yaml-rust = "0.4"
clap = "2.31.2"
phf = "0.7.21"
includedir = "0.4.0"
colornamer = "0.1.0"
regex = "1.0.0"
lazy_static = "1.0.0"
linked-hash-map = "0.5.1"

[dev-dependencies]
tempfile = "3.0.1"

[build-dependencies]
includedir_codegen = "0.4.0"
